--- a/mysite/whatsanalyzer/templates/whatsanalyzer/upload.html
+++ b/mysite/whatsanalyzer/templates/whatsanalyzer/upload.html
@@ -1,4 +1,5 @@
 <h1>UPLOAD SUCCESSFUL</h1>
+<h2>Uploaded File Dict : {{requestFiles}} </h2>
 <h2>Uploaded File Name : {{uploadedFile.name}} </h2>
 <body>Uploaded File List Length : {{fileContentsListLength}} </body>
 <body>Uploaded File Contents List :
