POC on 200-line chat

--- a/mysite/whatsanalyzer/templates/whatsanalyzer/upload.html
+++ b/mysite/whatsanalyzer/templates/whatsanalyzer/upload.html
@@ -1,12 +1,25 @@
 <h1>UPLOAD SUCCESSFUL</h1>
-<h2>requestFiles : {{requestFiles}} </h2>
 <h2>Uploaded File Name : {{uploadedFile.name}} </h2>
 <body>Uploaded File List Length : {{fileContentsListLength}} </body>
-<body>Uploaded File Contents List :
-{% for line in fileContentsList %}
-    <br />{{line}}<br />
-{% endfor %}
-</body>
+<body>s1 : {{s1}} </body>
+<body>s2 : {{s2}} </body>
+<body>s3 : {{s3}} </body>
+<body>s4 : {{s4}} </body>
+<body>s5 : {{s5}} </body>
+<body>s6 : {{s6}} </body>
+<body>s7 : {{s7}} </body>
+<body>s8 : {{s8}} </body>
+<body>s9 : {{s9}} </body>
+<body>s10 : {{s10}} </body>
+
+
+
+
+<!--<body>Uploaded File Contents List :-->
+<!--{% for line in fileContentsList %}-->
+<!--    <br />{{line}}<br />-->
+<!--{% endfor %}-->
+<!--</body>-->
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
