Parsedate bug fix + removed backend django models

--- a/mysite/whatsanalyzer/templates/whatsanalyzer/metrics.html
+++ b/mysite/whatsanalyzer/templates/whatsanalyzer/metrics.html
@@ -1,6 +1,8 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
+{% load static %}
+
 <html>
 	<head>
 		<title>Full Motion</title>
@@ -8,6 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="{% static 'css/main.css' %}" />
 	</head>
+
 	<body id="top">
 
 			<!-- banner.jpg' %} -->
@@ -109,6 +112,7 @@
 					</div>
 				</div>
 
+
 			<!-- Footer -->
 				<footer id="footer">
 					<div class="inner">
@@ -123,7 +127,7 @@
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="mailto:WTAN132@e.ntu.edu.sg" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
-						<p class="copyright">&copy; JourneyWithJed, 2020<br>Design Credits : <a href="https://templated.co">TEMPLATED</a>.</p>
+						<p class="copyright">&copy; JourneyWithJed, 2020.</p>
 					</div>
 				</footer>
 
