ParseDate bug fix

--- a/mysite/whatsanalyzer/templates/whatsanalyzer/metrics.html
+++ b/mysite/whatsanalyzer/templates/whatsanalyzer/metrics.html
@@ -26,7 +26,7 @@
 							<p>Keen to find out more about your chat patterns?<br />
 								Scroll down and have a look for yourself!</p>
 						</header>
-						<a href="#main" class="more">Learn More</a>
+						<a class="more" href="#main">More</a>
 					</div>
 				</section>
 
@@ -111,7 +111,6 @@
 						</div>
 					</div>
 				</div>
-
 
 			<!-- Footer -->
 				<footer id="footer">
