--- a/mysite/whatsanalyzer/templates/whatsanalyzer/stash.html
+++ b/mysite/whatsanalyzer/templates/whatsanalyzer/stash.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 {% load static %}
@@ -19,18 +19,88 @@
 </head>
 
 <body>
-    <script type="text/javascript">
-        <!-- SETTING UP FIREBASE CREDENTIALS -->
+
+    <ol id="historyListView">
+        <!-- TODO : fileList VARIABLE IS INACCESSIBLE HERE + MAKE DYNAMIC LISTVIEW-->
+        <!-- HTML FOR LOOP TO GENERTE EACH CARD IN A BLOCK-->
+        <!--CARD 1-->
+        <li class="demo-card-square mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title mdl-card--expand">
+                <h2 class="mdl-card__title-text">Update</h2>
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                    View Updates
+                </a>
+            </div>
+        </li>
+
+        <!--CARD 2-->
+        <li class="demo-card-square mdl-card mdl-shadow--2dp">
+        <div class="mdl-card__title mdl-card--expand">
+            <h2 class="mdl-card__title-text">Update</h2>
+        </div>
+        <div class="mdl-card__actions mdl-card--border">
+            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                View Updates
+            </a>
+        </div>
+        </li>
+
+        <!--CARD 3-->
+        <li class="demo-card-square mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title mdl-card--expand">
+                <h2 class="mdl-card__title-text">Update</h2>
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                    View Updates
+                </a>
+            </div>
+        </li>
+
+        <!--CARD 4-->
+        <li class="demo-card-square mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title mdl-card--expand">
+                <h2 class="mdl-card__title-text">Update</h2>
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                    View Updates
+                </a>
+            </div>
+        </li>
+
+        <!--CARD 5-->
+        <li class="demo-card-square mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title mdl-card--expand">
+                <h2 class="mdl-card__title-text">Update</h2>
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                    View Updates
+                </a>
+            </div>
+        </li>
+    </ol>
+
+
+    
+</body>
+
+
+<script type="text/javascript">
+        <!--    SETTING UP FIREBASE CREDENTIALS-- >
         var firebaseConfig = {
-              apiKey: "AIzaSyDhJD_AENniovRoVttwWmwaKwlpKuHyVck",
-              authDomain: "whatsapp-27255.firebaseapp.com",
-              databaseURL: "https://whatsapp-27255.firebaseio.com",
-              projectId: "whatsapp-27255",
-              storageBucket: "whatsapp-27255.appspot.com",
-              messagingSenderId: "998524713961",
-              appId: "1:998524713961:web:dedfaf0cc4d5710d65e978",
-              measurementId: "G-T5B7QLDPKN"
-          };
+            apiKey: "AIzaSyDhJD_AENniovRoVttwWmwaKwlpKuHyVck",
+            authDomain: "whatsapp-27255.firebaseapp.com",
+            databaseURL: "https://whatsapp-27255.firebaseio.com",
+            projectId: "whatsapp-27255",
+            storageBucket: "whatsapp-27255.appspot.com",
+            messagingSenderId: "998524713961",
+            appId: "1:998524713961:web:dedfaf0cc4d5710d65e978",
+            measurementId: "G-T5B7QLDPKN"
+        };
 
         // INITIALIZE FIREBASE MAIN APP AND START ANALYTICS
         firebase.initializeApp(firebaseConfig);
@@ -39,15 +109,15 @@
         var storageRef = firebase.storage().ref();
 
 
-        <!-- COOKIE GETTER TO RETRIEVE CURRENT USER'S DISPLAY NAME -->
+        <!--COOKIE GETTER TO RETRIEVE CURRENT USER'S DISPLAY NAME-->
         // HELPER : COOKIE GETTER
         function getCookie(name) {
             var nameEQ = name + "=";
             var ca = document.cookie.split(';');
-            for(var i=0;i < ca.length;i++) {
+            for (var i = 0; i < ca.length; i++) {
                 var c = ca[i];
-                while (c.charAt(0)==' ') c = c.substring(1,c.length);
-                if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
+                while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+                if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
             }
             return null;
         }
@@ -59,32 +129,31 @@
         // SETUP CLOUD DIRECTORY TO PULL FROM
         var folderRef = storageRef.child(currentUserName);
         var fileList = [];
-        alert("folderRef : " + folderRef);
 
         // PULL ALL FILES BELONGING TO THE USER
-        folderRef.listAll().then(function(res) {
-          res.items.forEach(function(itemRef) {
-              fileList.push(itemRef);
-          });
-          alert(fileList.join("\n"));
-        }).catch(function(error) {
-            alert("folderRef.listAll() FAILED");
+        folderRef.listAll().then(function (res) {
+            res.items.forEach(function (itemRef) {
+                fileList.push(itemRef);
+            });
+            alert(fileList.join("\n"));
+
+            // POPULATE THE LISTVIEW
+            // SHOW PAST 5 UPLOADED FILES
+            var historyListView = document.getElementById('historyListView');
+            for (var i = 0; i < fileList.length; i++) {
+                var cardView = document.createElement('li');
+                cardView.className = "card";
+                var regExp = /WhatsApp Chat with .*.txt$/g;
+                var match = regExp.exec(fileList[i]);
+                cardView.innerHTML = match[0].substring(0, match[0].length - 4);
+                historyListView.appendChild(cardView);
+            }
+        }).catch(function (error) {
+            alert(error.message);
         });
-    </script>
-    <div class="demo-card-square mdl-card mdl-shadow--2dp">
-      <div class="mdl-card__title mdl-card--expand">
-        <h2 class="mdl-card__title-text">Update</h2>
-      </div>
-      <div id="supporting_text_1" class="mdl-card__supporting-text">
-        <!-- TODO : fileList VARIABLE IS INACCESSIBLE HERE + MAKE DYNAMIC LISTVIEW-->
-<!--        HTML FOR LOOP TO GENERTE EACH CARD IN A BLOCK-->
-          {{fileList}}
-      </div>
-      <div class="mdl-card__actions mdl-card--border">
-        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-          View Updates
-        </a>
-      </div>
-    </div>
-</body>
+
+        
+</script>
+
+
 </html>
