Added cloud selection functionality
BUG : Performs double GET request on success

--- a/mysite/whatsanalyzer/templates/whatsanalyzer/metrics.html
+++ b/mysite/whatsanalyzer/templates/whatsanalyzer/metrics.html
@@ -13,13 +13,12 @@
 
 	<body id="top">
 
-			<!-- banner.jpg' %} -->
 			<!--
 				To use a video as your background, set data-video to the name of your video without
 				its extension (eg. {% static 'img/banner.jpg' %}). Your video must be available in both .mp4 and .webm
 				formats to work correctly.
 			-->
-				<section id="banner"<img src="{% static 'img/bg-masthead.jpg' %}"/>
+				<section id="banner"/>
 					<div class="inner">
 						<header>
 							<h1>Conversation Insights</h1>
