--- a/mysite/static/css/file-picker.css
+++ b/mysite/static/css/file-picker.css
@@ -1,10 +1,16 @@
-.demo-card-square.mdl-card {
-  width: 320px;
-  height: 320px;
+.demo-card-wide.mdl-card {
+  width: 512px;
+}
+.demo-card-wide > .mdl-card__title {
+  color: #FFFFFF;
+  height: 176px;
+  background: url('../img/C1.jpg') center / cover;
+}
+.demo-card-wide > .mdl-card__menu {
+  color: #FFFFFF;
 }
 
-.demo-card-square > .mdl-card__title {
-  color: #fff;
-  background:
-    url('../img/C1.jpg') bottom right 15% no-repeat #46B6AC;
+.support-text {
+  color: #341F97;
+  font-weight: bold;
 }
