--- a/mysite/whatsanalyzer/templates/whatsanalyzer/stash.html
+++ b/mysite/whatsanalyzer/templates/whatsanalyzer/stash.html
@@ -21,19 +21,38 @@
 <body>
 
     <ol id="historyListView">
-        <!-- TODO : fileList VARIABLE IS INACCESSIBLE HERE + MAKE DYNAMIC LISTVIEW-->
-        <!-- HTML FOR LOOP TO GENERTE EACH CARD IN A BLOCK-->
-        <!--CARD 1-->
-        <li class="demo-card-square mdl-card mdl-shadow--2dp">
-            <div class="mdl-card__title mdl-card--expand">
-                <h2 class="mdl-card__title-text">Update</h2>
-            </div>
-            <div class="mdl-card__actions mdl-card--border">
+        <!--TODO : FIND TEMPLATE FOR HTML LISTVIEW-->
+
+        <!--JS-->
+
+
+        <!--JS-->
+
+        <!--TEST CARD-->
+        <div class="container">
+            <div id="cardOne" class="demo-card-wide mdl-card mdl-shadow--2dp">
+              <div class="mdl-card__title">
+                <h2 class="mdl-card__title-text">Welcome</h2>
+              </div>
+              <div id="supportTextOne" class="mdl-card__supporting-text">
+                  <a class="support-text"> File : {{historyListView}}</a><br><br>
+                  <a class="support-text"> Date : {{historyListView}}</a>
+              </div>
+              <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-                    View Updates
+                    Select
                 </a>
+              </div>
+              <div class="mdl-card__menu">
+                <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+                  <i class="material-icons">share</i>
+                </button>
+              </div>
             </div>
-        </li>
+        </div>
+
+        <!--CARD 1-->
+
 
         <!--CARD 2-->
         <li class="demo-card-square mdl-card mdl-shadow--2dp">
@@ -84,75 +103,70 @@
         </li>
     </ol>
 
-
-    
 </body>
 
 
 <script type="text/javascript">
-        <!--    SETTING UP FIREBASE CREDENTIALS-- >
-        var firebaseConfig = {
-            apiKey: "AIzaSyDhJD_AENniovRoVttwWmwaKwlpKuHyVck",
-            authDomain: "whatsapp-27255.firebaseapp.com",
-            databaseURL: "https://whatsapp-27255.firebaseio.com",
-            projectId: "whatsapp-27255",
-            storageBucket: "whatsapp-27255.appspot.com",
-            messagingSenderId: "998524713961",
-            appId: "1:998524713961:web:dedfaf0cc4d5710d65e978",
-            measurementId: "G-T5B7QLDPKN"
-        };
+    <!--SETTING UP FIREBASE CREDENTIALS-->
+    var firebaseConfig = {
+        apiKey: "AIzaSyDhJD_AENniovRoVttwWmwaKwlpKuHyVck",
+        authDomain: "whatsapp-27255.firebaseapp.com",
+        databaseURL: "https://whatsapp-27255.firebaseio.com",
+        projectId: "whatsapp-27255",
+        storageBucket: "whatsapp-27255.appspot.com",
+        messagingSenderId: "998524713961",
+        appId: "1:998524713961:web:dedfaf0cc4d5710d65e978",
+        measurementId: "G-T5B7QLDPKN"
+    };
 
-        // INITIALIZE FIREBASE MAIN APP AND START ANALYTICS
-        firebase.initializeApp(firebaseConfig);
+    // INITIALIZE FIREBASE MAIN APP AND START ANALYTICS
+    firebase.initializeApp(firebaseConfig);
 
-        // INITIALIZE REQUIRED FIREBASE REFERENCES
-        var storageRef = firebase.storage().ref();
+    // INITIALIZE REQUIRED FIREBASE REFERENCES
+    var storageRef = firebase.storage().ref();
 
 
-        <!--COOKIE GETTER TO RETRIEVE CURRENT USER'S DISPLAY NAME-->
-        // HELPER : COOKIE GETTER
-        function getCookie(name) {
-            var nameEQ = name + "=";
-            var ca = document.cookie.split(';');
-            for (var i = 0; i < ca.length; i++) {
-                var c = ca[i];
-                while (c.charAt(0) == ' ') c = c.substring(1, c.length);
-                if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
-            }
-            return null;
+    <!--COOKIE GETTER TO RETRIEVE CURRENT USER'S DISPLAY NAME-->
+    // HELPER : COOKIE GETTER
+    function getCookie(name) {
+        var nameEQ = name + "=";
+        var ca = document.cookie.split(';');
+        for (var i = 0; i < ca.length; i++) {
+            var c = ca[i];
+            while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+            if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
         }
+        return null;
+    }
 
-        // INITIALIZE REQUIRED FIREBASE REFERENCES
-        var currentUserName = getCookie('currentUserName');
+    // INITIALIZE REQUIRED FIREBASE REFERENCES
+    var currentUserName = getCookie('currentUserName');
 
+    // SETUP CLOUD DIRECTORY TO PULL FROM
+    var folderRef = storageRef.child(currentUserName);
+    var fileList = [];
 
-        // SETUP CLOUD DIRECTORY TO PULL FROM
-        var folderRef = storageRef.child(currentUserName);
-        var fileList = [];
+    // PULL ALL FILES BELONGING TO THE USER
+    folderRef.listAll().then(function (res) {
+        res.items.forEach(function (itemRef) {
+            fileList.push(itemRef);
+        });
+    <!--            alert(fileList.join("\n"));-->
 
-        // PULL ALL FILES BELONGING TO THE USER
-        folderRef.listAll().then(function (res) {
-            res.items.forEach(function (itemRef) {
-                fileList.push(itemRef);
-            });
-            alert(fileList.join("\n"));
-
-            // POPULATE THE LISTVIEW
-            // SHOW PAST 5 UPLOADED FILES
-            var historyListView = document.getElementById('historyListView');
-            for (var i = 0; i < fileList.length; i++) {
-                var cardView = document.createElement('li');
-                cardView.className = "card";
-                var regExp = /WhatsApp Chat with .*.txt$/g;
-                var match = regExp.exec(fileList[i]);
-                cardView.innerHTML = match[0].substring(0, match[0].length - 4);
-                historyListView.appendChild(cardView);
-            }
+        // POPULATE THE LISTVIEW
+        // SHOW PAST 5 UPLOADED FILES
+        var historyListView = document.getElementById('historyListView');
+        for (var i = 0; i < fileList.length; i++) {
+            var cardView = document.createElement('li');
+            cardView.className = "card";
+            var regExp = /WhatsApp Chat with .*.txt$/g;
+            var match = regExp.exec(fileList[i]);
+            cardView.innerHTML = match[0].substring(0, match[0].length - 4);
+            historyListView.appendChild(cardView);
+        }
         }).catch(function (error) {
             alert(error.message);
         });
-
-        
 </script>
 
 
