Added loading spinner
TODO : Create black overlay and add the spinner

--- a/mysite/whatsanalyzer/templates/whatsanalyzer/metrics.html
+++ b/mysite/whatsanalyzer/templates/whatsanalyzer/metrics.html
@@ -8,7 +8,7 @@
 		<title>Full Motion</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="{% static 'css/main.css' %}" />
+		<link rel="stylesheet" href="{% static 'css/metrics.css' %}" />
 	</head>
 
 	<body id="top">
@@ -111,7 +111,7 @@
 							<div class="box">
 								<a class="image fit"><img src="{% static 'img/graphOriginal.jpg' %}" alt="" /></a>
 								<div class="inner">
-									<h2>Still not satisfied?</h2>
+									<h2>I've more for you!</h2>
 									<p>Check out your reply timings in this scatter chart here!</p>
 									<a href="/charts/" class="button style fit" data-poptrox="youtube,800x400">View</a>
 								</div>
