--- a/mysite/whatsanalyzer/templates/whatsanalyzer/stash_new.html
+++ b/mysite/whatsanalyzer/templates/whatsanalyzer/stash_new.html
@@ -25,6 +25,8 @@
     <div class="overlay">my_overlay</div>
 
     <!--LOADING SPINNER-->
+	<!--TODO : Centre the loading spinner-->
+
     <div class="spinner">
         <img class="spinner" src="{% static 'img/spinner.gif' %}" />
     </div>
